обновлен ignore, удалена папка ds store

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.DS_Store
 raas_project/raas_func/smart_parking_train/dataset/images/*
 raas_project/raas_func/smart_parking_train/models/*
 raas_project/raas_func/recordings/*
